Refine Keycloak role fetching for groups