@@ -170,7 +170,7 @@ public class OrganizationalUnitManager {
         if (organizationalUnitEntity != null) {
             OrganizationalUnitOverviewType orgaOverview = AccessControlMapper.mapToSwaggerOrganizationalUnit(organizationalUnitEntity);
             orgaOverview.setUserAdminRoles(provider.getOrganizationalUnitCreationPermissions(organizationalUnitEntity));
-            orgaOverview.setAdminRoles(getGroupAdminRoles(organizationalUnitEntity));
+//            orgaOverview.setAdminRoles(getGroupAdminRoles(organizationalUnitEntity));
             return orgaOverview;
         } else {
             logger.error("No OrganizationalUnit with id '{}' was found in database. Delete request has no effect.",
@@ -191,32 +191,43 @@ public class OrganizationalUnitManager {
      * @return administrative roles for the organizational unit
      */
     public List<GroupAdminRolesType> getGroupAdminRoles (OrganizationalUnitEntity organizationalUnitEntity) {
-        List<RoleRepresentation> simpleRolesRepList = keycloakAdminService.getRolesForGroup(organizationalUnitEntity.getKeycloakId().toString());
+        try {
+            logger.info("Fetch admin roles from Keycloak for organizational unit {}", organizationalUnitEntity.getOrganizationalUnitId());
+            List<RoleRepresentation> simpleRolesRepList = keycloakAdminService.getRolesForGroup(organizationalUnitEntity.getKeycloakId().toString());
 
-        // Requested roles for group are a simple representation and do not contain attributes. Hence, we have
-        // to request every single role firs, to fetch all details.
-        List<RoleRepresentation> rolesRepList = simpleRolesRepList.stream()
-                .map(r -> {
-                    try {
-                        return keycloakAdminService.getRoleById(r.getId());
-                    } catch (KeycloakException ex) {
-                        logger.error("Error while fetching Keycloak role with ID '{}'.", r.getId());
-                        return null;
-                    }
-                })
-                .filter(Objects::nonNull)
-                .toList();
+            // Requested roles for group are a simple representation and do not contain attributes. Hence, we have
+            // to request every single role firs, to fetch all details.
+            List<RoleRepresentation> rolesRepList = simpleRolesRepList.stream()
+                    .map(r -> {
+                        try {
+                            return keycloakAdminService.getRoleById(r.getId());
+                        } catch (KeycloakException ex) {
+                            logger.error("Error while fetching Keycloak role with ID '{}'.", r.getId());
+                            return null;
+                        }
+                    })
+                    .filter(Objects::nonNull)
+                    .toList();
+            logger.debug("Found {} assigned admin roles for organizational unit {}", rolesRepList.size(), organizationalUnitEntity.getOrganizationalUnitId());
+            Map<String, List<RoleRepresentation>> groupsMap =
+                    rolesRepList.stream()
+                            .filter(r -> r.getAttributes().get(KeycloakAdminService.KOMMONITOR_ID_ATTRIBUTE) != null
+                                    && r.getAttributes().get(KeycloakAdminService.KOMMONITOR_ROLE_TYPE_ATTRIBUTE) != null
+                            )
+                            .collect(Collectors.groupingBy(r -> r.getAttributes().get(KeycloakAdminService.KOMMONITOR_ID_ATTRIBUTE).get(0)));
+            logger.debug("Found admin roles for {} groups that are valid.", groupsMap.size());
 
-        Map<String, List<RoleRepresentation>> groupsMap =
-                rolesRepList.stream().collect(Collectors.groupingBy(r -> r.getAttributes().get(KeycloakAdminService.KOMMONITOR_ID_ATTRIBUTE).get(0)));
-
-        return groupsMap.entrySet().stream()
-                .map(e -> {
-                    List<AdminRoleType> roleNames = e.getValue().stream()
-                            .map(v -> AdminRoleType.fromValue(v.getAttributes().get(KeycloakAdminService.KOMMONITOR_ROLE_TYPE_ATTRIBUTE).get(0)))
-                            .collect(Collectors.toList());
-                    return new GroupAdminRolesType(e.getKey(), roleNames);
-                }).toList();
+            return groupsMap.entrySet().stream()
+                    .map(e -> {
+                        List<AdminRoleType> roleNames = e.getValue().stream()
+                                .map(v -> AdminRoleType.fromValue(v.getAttributes().get(KeycloakAdminService.KOMMONITOR_ROLE_TYPE_ATTRIBUTE).get(0)))
+                                .collect(Collectors.toList());
+                        return new GroupAdminRolesType(e.getKey(), roleNames);
+                    }).toList();
+        } catch(KeycloakException ex) {
+            logger.error(String.format("Error while trying to fetch admin roles from Keycloak for OrganizationalUnit '%s'.", organizationalUnitEntity.getOrganizationalUnitId()), ex);
+            return Collections.emptyList();
+        }
     }
 
     public OrganizationalUnitPermissionOverviewType getOrganizationalUnitPermissionsById(String organizationalUnitId) throws ResourceNotFoundException {
@@ -257,7 +268,7 @@ public class OrganizationalUnitManager {
                 .map(o -> {
                     OrganizationalUnitOverviewType orgaOverview = AccessControlMapper.mapToSwaggerOrganizationalUnit(o);
                     orgaOverview.setUserAdminRoles(provider.getOrganizationalUnitCreationPermissions(o));
-                    orgaOverview.setAdminRoles(getGroupAdminRoles(o));
+//                    orgaOverview.setAdminRoles(getGroupAdminRoles(o));
                     return orgaOverview;
                 }).toList();
     }
